contact form update

--- a/index.html
+++ b/index.html
@@ -1558,7 +1558,7 @@
                 </ul>
               </div>
               <div class="contact-form">
-                <form action="mailto:samiulajomm@gmail.com" method="post">
+                <form action="https://formspree.io/f/myzbejbq" method="post">
                   <input
                     type="text"
                     id="name"
@@ -1626,14 +1626,6 @@
                         title="Instagram Profile"
                         rel="noopener noreferrer"
                         ><i class="fab fa-instagram"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a
-                        href="mailto:samiulajomm@gmail.com"
-                        target="_blank"
-                        title="Gmail Profile"
-                        ><i class="fa-solid fa-envelope"></i
                       ></a>
                     </li>
                     <li>
@@ -1714,3 +1706,4 @@
     <!--! ALL JAVASCRIPT END ************************************ -->
   </body>
 </html>
+
