profile image update

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
       <nav class="desktop">
         <div class="nav-logo">
           <div>
-            <img src="./image/nav/pro2.png" alt="" />
+            <img src="./image/nav/pro3.png" alt="samiul" />
           </div>
           <h2>Md. Samiul Ajom</h2>
           <hr />
