form attribute update

--- a/index.html
+++ b/index.html
@@ -1562,20 +1562,20 @@
                   <input
                     type="text"
                     id="name"
-                    name="name"
+                    name="Name"
                     placeholder="Name"
                     required=""
                   />
                   <input
                     type="email"
                     id="email"
-                    name="email"
+                    name="Email"
                     placeholder="E-Mail"
                     required=""
                   />
                   <textarea
                     id="message"
-                    name="message"
+                    name="Message"
                     placeholder="Message"
                     rows="5"
                     required
