--- a/index.html
+++ b/index.html
@@ -5,7 +5,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Site tittle ============================================================== -->
-    <title>Samiul Ajom | Resume & Portfolio</title>
+   <title>Md. Samiul Ajom | Frontend & Shopify Developer | React & Next.js Specialist</title>
+   
+   <!--===========================✅ SEO CODE START ✅====================================== -->
+
+  <!-- (All meta description, keywords, OG, twitter, JSON-LD etc) -->
+
+  <meta name="title" content="Md. Samiul Ajom | Frontend & Shopify Developer" />
+  <meta name="description" content="Frontend & Shopify Developer skilled in React.js, Next.js, Tailwind, Bootstrap & Shopify customization. Currently working at Betopia Group." />
+  <meta name="keywords" content="Frontend Developer Bangladesh, Shopify Developer Bangladesh, React Developer Portfolio, Next.js Developer, Tailwind CSS, Shopify Theme, JavaScript Developer" />
+  <meta name="author" content="Md. Samiul Ajom" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Md. Samiul Ajom | Frontend & Shopify Developer" />
+  <meta property="og:description" content="React, Next.js & Shopify Developer crafting responsive UI & eCommerce stores." />
+  <meta property="og:url" content="https://samiulajom.github.io/samiul-showcase/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="image/preview/portfolio-preview.jpg" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Md. Samiul Ajom | Frontend & Shopify Developer" />
+  <meta name="twitter:description" content="React & Shopify Developer crafting responsive UI & optimized eCommerce stores." />
+  <meta name="twitter:image" content="image/preview/portfolio-preview.jpg" />
+
+  <!-- JSON-LD Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org/",
+    "@type": "Person",
+    "name": "Md. Samiul Ajom",
+    "jobTitle": "Frontend & Shopify Developer",
+    "url": "https://samiulajom.github.io/samiul-showcase/",
+    "image": "image/nav/pro3.png",
+    "worksFor": { "@type": "Organization", "name": "Betopia Group" },
+    "sameAs": [
+      "https://github.com/samiulajom",
+      "https://www.linkedin.com/in/samiul-ajom/"
+    ],
+  "skills": ["React", "Next.js", "Shopify", "GSAP", "Tailwind CSS", "JavaScript", "Bootstrap", "Figma", "Adobe Photoshop", "Adobe Illustrator", "Canva", "Microsoft Office"]
+  }
+  </script>
+
+   <!--===========================✅ SEO CODE END ✅====================================== -->
     <!-- fav icon =================================================================-->
     <!-- <link rel="icon" href="image/logo/samiul-logo.png" type="image/png" /> -->
     <link rel="icon" href="image/logo/s-favicon.jpg" type="image/jpg" />
@@ -14,6 +57,7 @@
       href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap"
       rel="stylesheet"
     />
+    
     <!--Fontawsome ================================================================-->
     <link
       rel="stylesheet"
