--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
         <!--Banner/Home start ==================== -->
         <section id="home" class="banner">
           <div class="left">
-            <span class="name"><span>//</span> Md. Samiul Ajom</span>
+          <h1>  <span class="name"><span>//</span> Md. Samiul Ajom</span></h1>
             <h3>
               Creative Designer <br />
               And <br /><span class="auto-type"></span>
