--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
       <nav class="desktop">
         <div class="nav-logo">
           <div>
-            <img src="./image/nav/pro3.png" alt="samiul" />
+            <img src="./image/nav/pro3.png" alt="Samiul Ajom" />
           </div>
           <h2>Md. Samiul Ajom</h2>
           <hr />
@@ -697,7 +697,7 @@
           </div>
           <div class="right">
             <div class="image-container">
-              <img src="./image/banner/samiul-4.png" alt="" />
+              <img src="./image/banner/samiul-4.png" alt="Samiul Ajom" />
             </div>
           </div>
         </section>
@@ -1100,7 +1100,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/2.jpg" alt="" />
+                            <img src="./image/testimonial/2.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
                             <h3>Jhon Doe</h3>
@@ -1121,7 +1121,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/1.jpg" alt="" />
+                            <img src="./image/testimonial/1.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
                             <h3>Armin Bhaan vuiran</h3>
@@ -1142,7 +1142,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/3.jpg" alt="" />
+                            <img src="./image/testimonial/3.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
                             <h3>Abrar Chowdury</h3>
@@ -1163,7 +1163,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/2.jpg" alt="" />
+                            <img src="./image/testimonial/2.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
                             <h3>Jhon Doe</h3>
@@ -1184,7 +1184,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/1.jpg" alt="" />
+                            <img src="./image/testimonial/1.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
                             <h3>Armin Bhaan vuiran</h3>
@@ -1205,7 +1205,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/3.jpg" alt="" />
+                            <img src="./image/testimonial/3.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
                             <h3>Abrar Chowdury</h3>
@@ -1226,7 +1226,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/2.jpg" alt="" />
+                            <img src="./image/testimonial/2.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
                             <h3>Jhon Doe</h3>
@@ -1247,7 +1247,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/1.jpg" alt="" />
+                            <img src="./image/testimonial/1.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
                             <h3>Armin Bhaan vuiran</h3>
@@ -1268,7 +1268,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/3.jpg" alt="" />
+                            <img src="./image/testimonial/3.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
                             <h3>Abrar Chowdury</h3>
@@ -1289,7 +1289,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/2.jpg" alt="" />
+                            <img src="./image/testimonial/2.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
                             <h3>Jhon Doe</h3>
@@ -1310,7 +1310,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/1.jpg" alt="" />
+                            <img src="./image/testimonial/1.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
                             <h3>Armin Bhaan vuiran</h3>
@@ -1331,7 +1331,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/3.jpg" alt="" />
+                            <img src="./image/testimonial/3.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
                             <h3>Abrar Chowdury</h3>
