--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- (All meta description, keywords, OG, twitter, JSON-LD etc) -->
 
   <meta name="title" content="Md. Samiul Ajom | Frontend & Shopify Developer" />
-  <meta name="description" content="Frontend & Shopify Developer skilled in React.js, Next.js, Tailwind, Bootstrap & Shopify customization. Currently working at Betopia Group." />
+  <meta name="description" content="Md. Samiul Ajom — Frontend & Shopify Developer skilled in React.js, Next.js, Tailwind, Bootstrap & Shopify customization. Currently working at Betopia Group building fast, responsive UI & optimized Shopify stores." />
   <meta name="keywords" content="Frontend Developer Bangladesh, Shopify Developer Bangladesh, React Developer Portfolio, Next.js Developer, Tailwind CSS, Shopify Theme, JavaScript Developer" />
   <meta name="author" content="Md. Samiul Ajom" />
   <meta name="robots" content="index, follow" />
@@ -518,7 +518,7 @@
               />
               <path
                 d="M801.28,625.08c2.5-13,11-24.1,20.34-33.14,3.46-3.34,7.38-6.62,12.13-7.38,10.42-1.67,18.22,8.81,24.21,17.5,15.78,22.92,37.86,42.7,64.74,49.87,32.24,8.6,69-3.32,90.07-29.21,5.93-7.29,10.85-16.59,8.74-25.75-2.56-11.12-14.11-17.37-24.63-21.79-39.59-16.65-81.66-27.51-119.62-47.59-30.42-16.09-59-39.61-70.77-71.94-15.06-41.24,1.63-90.09,34.76-118.9,56.31-49,152.57-45.19,209.73.32a134.22,134.22,0,0,1,19.5,19c12.67,15.21,22,34.4,20.57,54.13-1.1,14.78-11.08,30.7-25.88,31.21-15.49.54-25.91-14.81-36-26.62-24.31-28.59-65.65-44.32-103.24-38.64-15.23,2.3-30.51,8.1-40.93,19.44-22.68,24.7-6.72,52.51,19.18,64.7,34.26,16.12,72.17,22.8,107.45,36.56s69.88,37.28,82.2,73.09c12.55,36.5-1.62,78.21-27.41,106.93C1033,714.13,980.79,733,931,727.73c-27.59-2.89-54.23-13-77.33-28.24a184.81,184.81,0,0,1-32-26.84c-9.67-10.18-19.69-21.88-21-36.48A40.85,40.85,0,0,1,801.28,625.08Z"
-                style="fill: none; stroke: ; stroke-miterlimit: 10"
+                style="fill: none; stroke: none; stroke-miterlimit: 10"
               />
             </svg>
           </div>
