--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <!-- (All meta description, keywords, OG, twitter, JSON-LD etc) -->
 
   <meta name="title" content="Md. Samiul Ajom | Frontend & Shopify Developer" />
-  <meta name="description" content="Md. Samiul Ajom — Frontend & Shopify Developer skilled in React.js, Next.js, Tailwind, Bootstrap & Shopify customization. Currently working at Betopia Group building fast, responsive UI & optimized Shopify stores." />
-  <meta name="keywords" content="Frontend Developer Bangladesh, Shopify Developer Bangladesh, React Developer Portfolio, Next.js Developer, Tailwind CSS, Shopify Theme, JavaScript Developer" />
+  <meta name="description" content="Md. Samiul Ajom — Frontend & Shopify Developer skilled in React.js, Next.js, Tailwind & Bootstrap. Building fast, responsive UI & eCommerce stores.
+" />
+  <meta name="keywords" content="Frontend Developer, Shopify Developer, React Developer Portfolio, Next.js Developer, Tailwind CSS, Shopify Theme, JavaScript Developer" />
   <meta name="author" content="Md. Samiul Ajom" />
   <meta name="robots" content="index, follow" />
 
