--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Site tittle ============================================================== -->
-   <title>Md. Samiul Ajom | Frontend & Shopify Developer | React & Next.js Specialist</title>
+<title>Md. Samiul Ajom | Frontend & Shopify Developer | React.js & Next.js</title>
    
    <!--===========================✅ SEO CODE START ✅====================================== -->
 
   <!-- (All meta description, keywords, OG, twitter, JSON-LD etc) -->
 
-  <meta name="title" content="Md. Samiul Ajom | Frontend & Shopify Developer" />
-  <meta name="description" content="Md. Samiul Ajom — Frontend & Shopify Developer skilled in React.js, Next.js, Tailwind & Bootstrap. Building fast, responsive UI & eCommerce stores.
-" />
+ <meta name="title" content="Md. Samiul Ajom | Frontend & Shopify Developer" />
+ <meta name="description" content="Md. Samiul Ajom — Frontend & Shopify Developer skilled in React.js, Next.js, Tailwind & Bootstrap. Building fast, responsive UI & eCommerce stores.">
   <meta name="keywords" content="Frontend Developer, Shopify Developer, React Developer Portfolio, Next.js Developer, Tailwind CSS, Shopify Theme, JavaScript Developer" />
   <meta name="author" content="Md. Samiul Ajom" />
   <meta name="robots" content="index, follow" />
