--- a/index.html
+++ b/index.html
@@ -1,47 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Basic page need meta data =============================================== -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--Site tittle ============================================================== -->
-<title>Md. Samiul Ajom | Frontend & Shopify Developer | React.js & Next.js</title>
-<<<<<<< HEAD
-   
-=======
+     <!-- Basic Meta -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
->>>>>>> main
-   <!--===========================✅ SEO CODE START ✅====================================== -->
+  <!-- Title -->
+  <title>Md. Samiul Ajom | Frontend & Shopify Developer | React.js & Next.js</title>
 
-  <!-- (All meta description, keywords, OG, twitter, JSON-LD etc) -->
-
-<<<<<<< HEAD
- <meta name="title" content="Md. Samiul Ajom | Frontend & Shopify Developer" />
- <meta name="description" content="Md. Samiul Ajom — Frontend & Shopify Developer skilled in React.js, Next.js, Tailwind & Bootstrap. Building fast, responsive UI & eCommerce stores.">
-  <meta name="keywords" content="Frontend Developer, Shopify Developer, React Developer Portfolio, Next.js Developer, Tailwind CSS, Shopify Theme, JavaScript Developer" />
-=======
-<meta name="title" content="Md. Samiul Ajom | Frontend & Shopify Developer | React.js & Next.js" />
- <meta name="description" content="Md. Samiul Ajom — Frontend & Shopify Developer skilled in React.js & Next.js, Tailwind & Bootstrap. Building fast, responsive UI & eCommerce stores.">
-
-  <meta name="keywords" content="Frontend Developer, Shopify Developer, React.js Developer, Next.js Developer, Tailwind CSS, Bootstrap, Shopify Theme, JavaScript Developer, eCommerce Developer" />
->>>>>>> main
+  <!-- ✅ SEO Meta -->
+  <meta name="title" content="Md. Samiul Ajom | Frontend & Shopify Developer | React.js & Next.js" />
+  <meta name="description" content="Md. Samiul Ajom — Frontend & Shopify Developer skilled in React.js & Next.js. I build fast, responsive UI and custom Shopify eCommerce stores." />
+  <meta name="keywords" content="Frontend Developer, Shopify Developer, React.js Developer, Next.js Developer, Tailwind CSS, Bootstrap, JavaScript Developer, eCommerce Developer" />
   <meta name="author" content="Md. Samiul Ajom" />
   <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph -->
-<meta property="og:title" content="Md. Samiul Ajom | Frontend & Shopify Developer | React.js & Next.js" />
-<meta property="og:description" content="Md. Samiul Ajom — Frontend & Shopify Developer skilled in React.js, Next.js, Tailwind & Bootstrap. Building fast, responsive UI & eCommerce stores." />
-<meta property="og:url" content="https://samiulajom.github.io/samiul-showcase/" />
-<meta property="og:type" content="website" />
-<meta property="og:image" content="image/preview/portfolio-preview.jpg" />
+  <!-- ✅ Open Graph -->
+  <meta property="og:title" content="Md. Samiul Ajom | Frontend & Shopify Developer | React.js & Next.js" />
+  <meta property="og:description" content="Frontend & Shopify Developer skilled in React.js & Next.js. Building fast, responsive UI & Shopify stores." />
+  <meta property="og:url" content="https://samiulajom.github.io/samiul-showcase/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="image/preview/portfolio-preview.jpg" />
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="Md. Samiul Ajom | Frontend & Shopify Developer | React.js & Next.js" />
+  <!-- ✅ Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Md. Samiul Ajom | Frontend & Shopify Developer" />
-  <meta name="twitter:description" content="React & Shopify Developer crafting responsive UI & optimized eCommerce stores." />
+  <meta name="twitter:description" content="React & Shopify Developer crafting fast UI & modern eCommerce stores." />
   <meta name="twitter:image" content="image/banner/protfolio overview.png" />
 
-  <!-- JSON-LD Schema -->
+  <!-- ✅ JSON-LD Schema -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org/",
@@ -55,11 +42,12 @@
       "https://github.com/samiulajom",
       "https://www.linkedin.com/in/samiul-ajom/"
     ],
-  "skills": ["React", "Next.js", "Shopify", "GSAP", "Tailwind CSS", "JavaScript", "Bootstrap", "Figma", "Adobe Photoshop", "Adobe Illustrator", "Canva", "Microsoft Office"]
+    "skills": ["React", "Next.js", "Shopify", "Tailwind CSS", "JavaScript", "Bootstrap", "GSAP", "Figma"]
   }
   </script>
 
    <!--===========================✅ SEO CODE END ✅====================================== -->
+   
     <!-- fav icon =================================================================-->
     <!-- <link rel="icon" href="image/logo/samiul-logo.png" type="image/png" /> -->
     <link rel="icon" href="image/logo/s-favicon.jpg" type="image/jpg" />
