file code update

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
           <select class="color-options" id="color-state">
             <option
               class="color-option"
-              style="background-color: rgba(13, 170, 131, 0.884)"
-              value="rgba(13, 170, 131, 0.884)"
+              style="background-color: #32cd32"
+              value="#32cd32"
             >
-              Reset
+              Green
             </option>
             <option
               class="color-option"
@@ -157,14 +157,14 @@
               style="background-color: #3498db"
               value="#3498db"
             >
-              blue
+              Blue
             </option>
             <option
               class="color-option"
-              style="background-color: #32cd32"
-              value="#32cd32"
+            style="background-color: #0daa83e1"
+              value="rgba(13, 170, 131, 0.884)"
             >
-              green
+          Teal
             </option>
             <option
               class="color-option"
@@ -178,7 +178,7 @@
               style="background-color: #9b59b6"
               value="#9b59b6"
             >
-              purple
+              Purple
             </option>
           </select>
         </label>
@@ -388,6 +388,7 @@
             <img src="./image/nav/pro3.png" alt="Samiul Ajom" />
           </div>
           <h2>Md. Samiul Ajom</h2>
+          <p>Frontend & Shopify Developer | React.js & Next.js</p>
           <hr />
         </div>
         <ul>
@@ -1480,8 +1481,8 @@
           <div class="portfolio-list">
             <ul>
               <li class="big-img corporate personal">
-                <a href="#"
-                  ><img src="./image/portfolio/monnu.jpg" alt="monnu" />
+                <a href="https://react-monnu-foi4.vercel.app/"
+                  target="_blank"   alt="web and shopify developer" ><img src="./image/portfolio/monnu.jpg" alt="monnu" />
                   <div class="info">
                     <span>Design</span>
                     <br />
@@ -1490,8 +1491,8 @@
                 </a>
               </li>
               <li class="small-img personal">
-                <a href="#"
-                  ><img
+                <a href="https://samiulajom.github.io/peoject3/"
+                target="_blank"   alt="web and shopify developer"  ><img
                     src="./image/portfolio/portfolio-img2.png"
                     alt="monnu"
                   />
@@ -1503,8 +1504,8 @@
                 </a>
               </li>
               <li class="horizon-img app">
-                <a href="#"
-                  ><img src="./image/portfolio/cal.png" alt="monnu" />
+                <a href="https://samiulajom.github.io/calculator/"
+                  target="_blank"   alt="web and shopify developer" ><img src="./image/portfolio/cal.png" alt="monnu" />
                   <div class="info">
                     <span>Design</span>
                     <br />
@@ -1514,8 +1515,8 @@
               </li>
 
               <li class="big-img corporate">
-                <a href="#"
-                  ><img src="./image/portfolio/taxi.jpg" alt="taxi" />
+                <a href="https://samiulajom.github.io/Taxi-uber/"
+                 target="_blank"   alt="web and shopify developer"  ><img src="./image/portfolio/taxi.jpg" alt="taxi" />
                   <div class="info">
                     <span>Design</span>
                     <br />
@@ -1524,8 +1525,8 @@
                 </a>
               </li>
               <li class="big-img weather app">
-                <a href="#"
-                  ><img src="./image/portfolio/weather.png" alt="weather" />
+                <a href="https://samiulajom.github.io/Weather_Update/"
+                 target="_blank"   alt="web and shopify developer"  ><img src="./image/portfolio/weather.png" alt="weather" />
                   <div class="info">
                     <span>Design</span>
                     <br />
@@ -1534,8 +1535,8 @@
                 </a>
               </li>
               <li class="horizon-img app">
-                <a href="#"
-                  ><img src="./image/portfolio/quiz.png" alt="monnu" />
+                <a href="https://samiulajom.github.io/Quizapp/"
+                target="_blank"   alt="web and shopify developer"   ><img src="./image/portfolio/quiz.png" alt="quiz" />
                   <div class="info">
                     <span>Design</span>
                     <br />
@@ -1543,9 +1544,9 @@
                   </div>
                 </a>
               </li>
-              <li class="small-img personal">
-                <a href="#"
-                  ><img
+              <li class="small-img corporate">
+                <a href="https://samiulajom.github.io/Homework2/"
+                 target="_blank"   alt="web and shopify developer"  ><img
                     src="./image/portfolio/portfolio-img3.png"
                     alt="monnu"
                   />
